# StudyFlow

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: RecordButton.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  SummaryView.tsx  TranscriptView.tsx
src/hooks/: useRecorder.ts  useSession.ts
src/lib/: ollama.ts  sessions.ts  types.ts
