[package]
name = "studyflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "studyflow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "studyflow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
cpal = "0.15"
hound = "3"
once_cell = "1"
